[fix] After toggling editor on article screen, right side border is not visible. Fixes #5302. Fixes #5299

--- a/administrator/templates/isis/css/template.css
+++ b/administrator/templates/isis/css/template.css
@@ -7964,6 +7964,9 @@ input.input-large-text {
 	overflow: hidden;
 	position: relative;
 }
+.editor textarea.mce_editable {
+	box-sizing: border-box;
+}
 a.grid_false {
 	display: inline-block;
 	height: 16px;
